--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/map_key"/>
+<!--        add your Google Maps SDK APi key to strings.xml-->
         <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
