--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.githubuser">
+          xmlns:tools="http://schemas.android.com/tools" package="com.example.githubuser">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,18 +10,13 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.GithubUser">
-        <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="@string/map_key"/>
-<!--        add your Google Maps SDK APi key to strings.xml-->
-        <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version"/>
+            android:usesCleartextTraffic="true"
+            android:theme="@style/Theme.GithubUser" tools:targetApi="m">
 
         <activity android:name=".DetailActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
