--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
           package="com.example.githubuser">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <permission android:name="com.example.githubuser.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission android:name="com.example.githubuser.WRITE_DATABASE" android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,15 @@
         android:theme="@style/Theme.GithubUser"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <provider
+            android:name=".db.FavoriteProvider"
+            android:authorities="com.example.githubuser"
+            android:enabled="true"
+            android:readPermission="com.example.githubuser.READ_DATABASE"
+            android:writePermission="com.example.githubuser.WRITE_DATABASE"
+            android:exported="true">
+        </provider>
+
         <activity android:name=".views.FavoriteActivity">
         </activity>
         <activity android:name=".views.DetailActivity">
