--- a/consumerapp/build.gradle
+++ b/consumerapp/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-parcelize'
 }
 
 android {
@@ -9,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.githubuser"
+        applicationId "com.example.consumerapp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -32,7 +31,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        viewBinding = true
     }
 }
 
